@@ -1,12 +1,9 @@
-<!-- Automagically generated by the ToDo program on 03/26/05, 19:18 -->
+<!-- Automagically generated by the ToDo program on 2005-03-28 -->
 <todo version="0.1.18">
     <title>
         Todo list for herdstat
     </title>
-    <note priority="veryhigh" time="1111882682">
-        Instead of get_metadatas, create a Metadatas_T object which gets the list upon initialization.
-    </note>
-    <note priority="low" time="1111839601">
-        Add package lookup support to action_pkg_handler.
+    <note priority="veryhigh" time="1112014036">
+        Add support for looking up only no-herd packages for -dp
     </note>
 </todo>
