@@ -1,5 +1,15 @@
 ChangeLog for herdstat
 
+2005-03-27 Aaron Walker <ka0ttic@gentoo.org>
+
+	* src/util.hh: Renamed status_T to progress_T. Modified it to not
+	print leading zeros.
+	* src/metadatas.cc, src/metadatas.hh: Moved metadata.xml retrieval
+	code from action_pkg_handler.cc into it's own class.
+	* src/action_pkg_handler.cc: Moved metadata.xml retrieval code to
+	metadatas.{cc,hh}.  Also reworked the way we handle invalid
+	devs/herds.
+
 2005-03-26 Aaron Walker <ka0ttic@gentoo.org>
 	
 	* configure.ac: Update version (1.0-release).
